# codingProblems

./: .gitignore  Dockerfile  README.md  az01.py  az02.py  az03.py  az04.py  az05.py  az06.py  az07.py  az08.py  az09.py  az10.py  az11.py  az12.py  az13.py  az14.py  az15.py  az16.py  azBinTree.py  azLinkedList.py  az_04.py  codingProblems.code-workspace  dc01.py  dc02.py  dc03.py  dc04.py  dc05.py  dc06.py  dc07.py  dc08.py  dc09.py  dc10.py  dc11.py  dc12.py  dc13.py  dc14.py  dc15.py  dc16.py  dc17.py  (+13 more)
LC0383_ransomNote/: sol.py
az01/: az01solution.py  readme.md  testLocal.py  test_az01.py
az02/: az02.py  readme.md  testLocal.py  test_az02.py
az03/: az03.py  azLinkedList.py  readme.md  testLocal.py  testaz_03.py
az04/: az04.py  readme.md  testLocal.py  test_az04.py
az05/: az05.py  readme.md  testLocal.py  test_az05.py
az06/: az06.py  azBinTree.py  readme.md  testLocal.py  test_az06.py
az07/: az07.py  readme.md  testLocal.py  test_az07.py
az08/: az08.py  readme.md  testLocal.py  test_az08.py
az09/: az09.py  readme.md  testLocal.py  test_az09.py
az10/: az10.py  readme.md  testLocal.py  test_az10.py
az11/: az11.py  readme.md  testLocal.py  test_az11.py
az12/: az12.py  readme.md  testLocal.py  test_az12.py
az13/: az13.py  readme.md  testLocal.py  test_az13.py
az14/: az14.py  readme.md  testLocal.py  test_az14.py
az15/: az15.py  readme.md  testLocal.py  test_az15.py
az16/: az16.py  readme.md  testLocal.py  test_az16.py
bb01/: coding1.cpp  coding2.cpp
cDemo/: .gitignore  CMakeLists.txt  main.cpp  main.h
cDemo2/: .gitignore  CMakeLists.txt
cDemo2/hello/: CMakeLists.txt  hello.cpp  hello.h
cmakeDemo/hr1wd6_2_legoBlocks/src/: CMakeLists.txt
cppDefault/: readme.md
cppDefault/src/: CMakeLists.txt  solution.cpp  solution.h.in
cppDefault/tests/: CMakeLists.txt  test.cpp
dc01/: dc01.py  readme.md  testLocal.py  test_dc01.py
dc02/: dc02.py  readme.md  testLocal.py  test_dc02.py
dc03/: dc03.py  readme.md  testLocal.py  test_dc03.py
dc04/: dc04.py  readme.md  testLocal.py  test_dc04.py
dc05/: dc05.py  readme.md  testLocal.py  test_dc05.py
dc06/: dc06.py  readme.md  testLocal.py  test_dc06.py
dc07/: dc07.py  readme.md  testLocal.py  test_dc07.py
dc08/: dc08.py  readme.md  testLocal.py  test_dc08.py
dc09/: dc09.py  readme.md  testLocal.py  test_dc09.py
dc10/: dc10.py  readme.md  testLocal.py  test_dc10.py
dc11/: dc11.py  readme.md  testLocal.py  test_dc11.py
dc12/: readme.md  testLocal.py  test_dc12.py
dc13/: dc13.py  readme.md  testLocal.py  test_dc13.py
dc14/: dc14.py  readme.md  testLocal.py  test_dc14.py
dc15/: readme.md  testLocal.py  test_dc15.py
dc16/: dc16.py  readme.md  testLocal.py  test_dc16.py
dc17/: dc17.py  readme.md  testLocal.py  test_dc17.py
dc18/: dc18.py  readme.md  testLocal.py  test_dc18.py
dc19/: dc19.py  readme.md  testLocal.py  test_dc19.py
dc20/: dc20.py  readme.md  testLocal.py  test_dc20.py
dc21/: dc21.py  readme.md  testHelper.py  testLocal.py  test_dc21.py
dc22/: dc22.py  readme.md  testLocal.py  test_dc22.py
dc23/: dc23.py  readme.md  testLocal.py  test_dc23.py
dc47/: CMakeLists.txt  main.cpp  prob.cpp  prob.h  readme.md  solution.cpp  solution.h  test.cpp  test.h  test_dc47.py
dc50/: CMakeLists.txt  main.cpp  main.h  prob.cpp  prob.h  readme.md  solution.cpp  solution.h  testLocal.py  test_dc50.py
dc55/: CMakeLists.txt  main.cpp  main.h  prob.cpp  prob.h  readme.md  solution.cpp  solution.h  test.py  testLocal.py  test_dc55.py
demoHG/: interivew.py
eb01/: problem01.cpp  problem02.cpp
eu01/: eu01.py  readme.md  testLocal.py  test_eu01.py
eu02/: eu02.py  readme.md  testLocal.py  test_eu02.py
eu04/: eu04.py  readme.md  testLocal.py  test_eu04.py
hr1wd6_2_legoBlocks/: .gitignore  Dockerfile
hr1wd6_2_legoBlocks/src/: CMakeLists.txt  tutorial.cpp
hr1wd6_2_legoBlocks/src/MathFunctions/: CMakeLists.txt
hr1wd6_2_legoBlocks/src/include/: tutorialConfig.h.in
hrw1d6_2/: readme.md
hrw1d6_2/src/: CMakeLists.txt  main.cpp
hrw1d6_2/src/v/: CMakeLists.txt  v.cpp  v.h
hrw1d6_2/test/: CMakeLists.txt  test.cpp
hrw1d6_2_legoBlocks/: CMakeLists.txt  readme.md
hrw1d6_2_legoBlocks/legoBlocksInterface/: legoBlocksInterface.cpp  legoBlocksInterfaceConfig.h.in
hrw1d6_2_legoBlocks/legoFunctions/: CMakeLists.txt  legoFunctions.cpp  legoFunctions.h  legoFunctions2.cpp
hrw1d6_2_legoBlocks/tests/: CMakeLists.txt  test.cpp  testHelper.cpp  testHelper.h
lc00004_median_of_two_sorted_arrays/: main.cpp  medianOfTwoSortedArrays.cpp  medianOfTwoSortedArrays.h  test.cpp
lc00007_reverse_integer/: reverse_integer.cpp  reverse_integer.h  test.cpp
lc00008_string_to_int/: my_atoi.cpp  my_atoi.h  test.cpp
lc0002_addTwoNumbers/: CMakeLists.txt
lc0002_addTwoNumbers/addTwoNumbers/: CMakeLists.txt  addTwoNumbers.cpp  addTwoNumbers.h.in
lc0002_addTwoNumbers/tests/: CMakeLists.txt  test.cpp
lc0003LongestSubstringWithoutRepeating/: solution.cpp
lc0005_longestPalindromicSubstring/: CMakeLists.txt  lc0005_longestPalindromicSubstring.code-workspace
lc0005_longestPalindromicSubstring/interface/: interface.cpp  interface.h.in
lc0005_longestPalindromicSubstring/longestPalindromicSubstring/: CMakeLists.txt  longestPalindromicSubstring.cpp  longestPalindromicSubstring.h.in
lc0005_longestPalindromicSubstring/tests/: CMakeLists.txt  test.cpp
lc0013_RomanNumerals/: sol.py
lc0234_palindromLinkedList/: sol.py
lc0412_fizzBuzz/: sol.py
lc0658_findKClosestElements/: sol.py  testCases.json
lc0692_topKFrequentWords/: CMakeLists.txt  lc0692_topKFrequentWords.code-workspace  readme.md
lc0692_topKFrequentWords/interface/: interface.cpp
lc0692_topKFrequentWords/src/: solution.cpp  solution.h.in
lc0692_topKFrequentWords/tests/: test.cpp
lc0876_middleOfLinkedList/: sol.py
lc1337_theKWeakestRowsInAMatrix/: sol.py
lc1342_numberOfStepsToReduceANumberToZero/: sol.py
lc1672_richestCustomerWealth/: sol.py
lc2095_deleteTheMiddleNodeOfALinkedList/: solution.cpp
lc_array_01/: CMakeLists.txt  test.cpp  (+3 more)
lc_array_03/: CMakeLists.txt  readme.md  shifter.cpp  shifter.h  test.cpp
(+25 files in other folders)
